--- a/proyecto1/blogpost.html
+++ b/proyecto1/blogpost.html
@@ -7,6 +7,8 @@
         <div id="container">
             <div id="cabecera">
                 Cabecera
+                <img id="logo" src="imagenes/blogger.png" />
+                Hyperblog
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
