Se agregor el footer con sus estilos

--- a/proyecto1/blogpost.html
+++ b/proyecto1/blogpost.html
@@ -14,5 +14,8 @@
                 <p>Sigue las instrucciones dadas</p>
             </div>
         </div>
+        <div id="footer">
+            Hecho con Amor para toda Colombia
+        </div>
     </body>
 </html>
