Se agrego unas tildes que faltaban al párrafo

--- a/proyecto1/blogpost.html
+++ b/proyecto1/blogpost.html
@@ -10,8 +10,8 @@
                 Hyperblog
             </div>
             <div id="post">
-                <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <h1>Este es el título atractivo e intéresante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas incréibles que se pueden hacer con ramas</p>
                 <p>Sigue las instrucciones dadas</p>
             </div>
         </div>
