Se modificó el título de la cabecera

--- a/proyecto1/blogpost.html
+++ b/proyecto1/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id="cabecera">
                 <img id="logo" src="imagenes/blogger.png" />
-                Hyperblog
+                Hyperblog 2.0 El Blog del Futuro
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e intéresante del post</h1>
